<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:label="@string/app_name"
    android:hint="@string/search"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.tuteeHome.search.TuteeSearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:background="@null"
                android:tint="@color/colorPrimaryDark"
                android:id="@+id/back"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:minHeight="?actionBarSize"
                app:srcCompat="@drawable/round_arrow_back_24" />
            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                android:text="@string/view_tutor_profile"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp" />
            <Button
                android:id="@+id/addButton"
                style="@style/Widget.SeekTutorials.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:text="@string/message_tutor" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilepic"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        android:src="@drawable/round_account_circle_24"
        app:civ_border_width="2dp"
        app:civ_border_color="#000000"/>
    <LinearLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/profilepic">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/first_name"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/space"
            android:textAppearance="?attr/textAppearanceHeadline6"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/last_name"
            android:textAppearance="?attr/textAppearanceHeadline6"  />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/rating_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name">
        <RatingBar
            android:id="@+id/rating_bar_ave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="4.5"
            android:layout_gravity="center"
            android:progressTint="@color/colorPrimaryDark"/>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/about"
        android:textColor="@color/textColorButton"
        android:background="@color/colorPrimaryDark"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about">
        <LinearLayout
            android:id="@+id/textlayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@+id/card">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/textColorPrimary" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/textColorPrimary" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loc_sample"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/textColorPrimary"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edubg"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/textColorPrimary" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schoolsample"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/textColorPrimary"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_email"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/textColorPrimary" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/textColorPrimary"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
            </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/subjects"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/subjects"
        android:textColor="@color/textColorButton"
        android:background="@color/colorPrimaryDark"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/subjects_card"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjects">

        <LinearLayout
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/subject_specific"
                android:textAllCaps="true"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/subject_desc"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sched"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/fee"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/reviews"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/reviews"
        android:textColor="@color/textColorButton"
        android:background="@color/colorPrimaryDark"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjects_card" />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card3"
        android:layout_width="385dp"
        android:layout_height="153dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviews">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Media -->
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/tutee_tab"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/round_person_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- Title, secondary and supporting text -->
                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_gravity="start"
                    android:numStars="5"
                    android:padding="0dp"
                    android:progressTint="@color/colorPrimaryDark"
                    android:rating="4.5"
                    android:scaleX="0.5"
                    android:scaleY="0.5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_specific"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/first_name"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/space"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/last_name"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/rating_comment"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorPrimary" />

            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
